[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://scripts/Timer.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 149.0
margin_top = 37.0
margin_right = 215.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"

[node name="NewTimeLabel" type="Label" parent="."]
margin_left = 738.0
margin_top = 30.0
margin_right = 980.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 2 )
text = "Timer : 60"

[node name="MyTimer" type="Timer" parent="."]
script = ExtResource( 3 )

[connection signal="timeout" from="MyTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="timeout" from="MyTimer" to="." method="_on_MyTimer_timeout"]
[connection signal="timeout" from="MyTimer" to="." method="_on_Timer_timeout"]
